[*] added some tests [*] configured csrf().disable()